<resources>
    <string name="app_name">GeoFence</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone No.</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="register"><u>Create an account</u></string>
    <string name="registered"><u>Already have an account</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>