<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="200dp"
        android:layout_height="600dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_1"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >
            <EditText
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/neomorph"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:hint="@string/name"
                android:textColorHint="#9A9A9A"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/neomorph"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:hint="@string/phoneno"
                android:textColorHint="#9A9A9A"
                android:inputType="number"
                android:maxLength="10"
                android:importantForAutofill="no"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNo"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/neomorph"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:textColorHint="#9A9A9A"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/neomorph"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:hint="@string/confirmpass"
                android:textColorHint="#9A9A9A"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="530dp"
        android:layout_centerHorizontal="true">


        <ImageButton
            android:id="@+id/submit"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@null"
            android:background="@drawable/rectangle_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="#359EFF"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registered"
        android:id="@+id/login"
        android:layout_above="@+id/rectangle_4"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_4"
        android:elevation="4dp"
        tools:targetApi="lollipop" />
</RelativeLayout>